--- a/index.html
+++ b/index.html
@@ -5,63 +5,75 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Web Studio</title>
-		<link rel="stylesheet" href="./css/styles.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
 		<!--Шапка сайту-->
 		<header>
-			<a href="/"> <span>WEB</span>STUDIO </a>
+			<a href="/" class="logo"> <span class="logo-span">WEB</span>STUDIO </a>
 
 			<nav>
-				<ul>
-					<li><a href="./index.html">Studio</a></li>
-					<li><a href="./portfolio.html">Portfolio</a></li>
-					<li><a href="">Contacts</a></li>
+				<ul class="site-nav list">
+					<li><a href="./index.html" class="site-nav link">Studio</a></li>
+					<li><a href="./portfolio.html" class="site-nav link">Portfolio</a></li>
+					<li><a href="" class="site-nav link">Contacts</a></li>
 				</ul>
 			</nav>
 
-			<ul>
-				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+			<ul class="site-contacts list">
+				<li><a href="mailto:info@devstudio.com" class="contact-email link">info@devstudio.com</a></li>
+				<li><a href="tel:+110001111111" class="contact-phone link">+11 (000) 111-11-11</a></li>
 			</ul>
 		</header>
 
 		<main>
 			<!--Частина герой-->
-			<section>
-				<h1>Effective Solutions<br />for Your Business</h1>
-				<button type="button">Order Service</button>
+			<section class="hero-section">
+				<h1 class="title">Effective Solutions<br />for Your Business</h1>
+				<button class="modal-btn" type="button">Order Service</button>
 			</section>
 
 			<!--Переваги компанії-->
-			<section>
+			<section class="benefits-section">
 				<h2>Benefits</h2>
-				<ul>
+				<ul class="benefits list">
 					<li>
-						<h3>Strategy</h3>
-						<p> Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+						<h3 class="benefit-name">Strategy</h3>
+						<p class="benefit-description">
+							Our goal is to identify the business problem to walk away with the perfect and creative solution.
+						</p>
 					</li>
 					<li>
-						<h3>Punctuality</h3>
-						<p> Bring the key message to the brand's audience for the best price within the shortest possible time. </p>
+						<h3 class="benefit-name">Punctuality</h3>
+						<p class="benefit-description">
+							Bring the key message to the brand's audience for the best price within the shortest possible time.
+						</p>
 					</li>
 					<li>
-						<h3>Diligence</h3>
-						<p>
+						<h3 class="benefit-name">Diligence</h3>
+						<p class="benefit-description">
 							Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
 						</p>
 					</li>
 					<li>
-						<h3>Technologies</h3>
-						<p> Design practice focused on digital experiences. We bring forth a deep passion for problem-solving. </p>
+						<h3 class="benefit-name">Technologies</h3>
+						<p class="benefit-description">
+							Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+						</p>
 					</li>
 				</ul>
 			</section>
 
 			<!--Чим компанія займається-->
-			<section>
-				<h2>What are we doing</h2>
-				<ul>
+			<section class="products-section">
+				<h2 class="products-section title">What are we doing</h2>
+				<ul class="products list">
 					<li>
 						<img src="./images/monitor.jpg" alt="Computer monitor" width="360" height="300" />
 					</li>
@@ -75,28 +87,28 @@
 			</section>
 
 			<!--Команда-->
-			<section>
-				<h2>Our Team</h2>
-				<ul>
+			<section class="team-section">
+				<h2 class="team-section title">Our Team</h2>
+				<ul class="team list">
 					<li>
 						<img src="./images/product_designer.jpg" alt="A worker with a beard" width="264" height="260" />
-						<h3>Mark Guerrero</h3>
-						<p>Product Designer</p>
+						<h3 class="person-name">Mark Guerrero</h3>
+						<p class="position">Product Designer</p>
 					</li>
 					<li>
 						<img src="./images/frontend_developer.jpg" alt="A young man worker" width="264" height="260" />
-						<h3>Tom Ford</h3>
-						<p>Frontend Developer</p>
+						<h3 class="person-name">Tom Ford</h3>
+						<p class="position">Frontend Developer</p>
 					</li>
 					<li>
 						<img src="./images/marketing.jpg" alt="A young girl worker" width="264" height="260" />
-						<h3>Camila Garcia</h3>
-						<p>Marketing</p>
+						<h3 class="person-name">Camila Garcia</h3>
+						<p class="position">Marketing</p>
 					</li>
 					<li>
 						<img src="./images/ui_designer.jpg" alt="A young man worker with a beard" width="264" height="260" />
-						<h3>Daniel Wilson</h3>
-						<p>UI Designer</p>
+						<h3 class="person-name">Daniel Wilson</h3>
+						<p class="position">UI Designer</p>
 					</li>
 				</ul>
 			</section>
@@ -104,9 +116,10 @@
 
 		<!--Підвал-->
 		<footer>
-			<a href="/"> <span>WEB</span>STUDIO </a>
-
-			<p> Increase the flow of customers and sales for your business with digital marketing & growth solutions. </p>
+			<a href="/" class="logo-footer"> <span class="logo-footer-span">WEB</span>STUDIO </a>
+			<p class="footer-text">
+				Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+			</p>
 		</footer>
 	</body>
 </html>
