--- a/portfolio.html
+++ b/portfolio.html
@@ -5,107 +5,140 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Web Studio</title>
-		<link rel="stylesheet" href="./css/styles.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
 		<!--Шапка сайту-->
 		<header>
-			<a href="/"> <span>WEB</span>STUDIO </a>
+			<a href="/" class="logo"> <span class="logo-span">WEB</span>STUDIO </a>
 
 			<nav>
-				<ul>
-					<li><a href="./index.html">Studio</a></li>
-					<li><a href="./portfolio.html">Portfolio</a></li>
-					<li><a href="">Contacts</a></li>
+				<ul class="site-nav list">
+					<li><a href="./index.html" class="site-nav link">Studio</a></li>
+					<li><a href="./portfolio.html" class="site-nav link">Portfolio</a></li>
+					<li><a href="" class="site-nav link">Contacts</a></li>
 				</ul>
 			</nav>
 
-			<ul>
-				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+			<ul class="site-contacts list">
+				<li><a href="mailto:info@devstudio.com" class="contact-email link">info@devstudio.com</a></li>
+				<li><a href="tel:+110001111111" class="contact-phone link">+11 (000) 111-11-11</a></li>
 			</ul>
 		</header>
 		<!--Освноний контент-->
-		<main>
-			<h1>Portfolio</h1>
-			<ul>
-				<li><button type="button">All</button></li>
-				<li><button type="button">Web Site</button></li>
-				<li><button type="button">App</button></li>
-				<li><button type="button">Design</button></li>
-				<li><button type="button">Marketing</button></li>
+		<main class="portfolio">
+			<h1 class="portfolio-title">Portfolio</h1>
+			<ul class="portfolio-filter list">
+				<li><button class="portfolio-type" type="button">All</button></li>
+				<li><button class="portfolio-type" type="button">Web Site</button></li>
+				<li><button class="portfolio-type" type="button">App</button></li>
+				<li><button class="portfolio-type" type="button">Design</button></li>
+				<li><button class="portfolio-type" type="button">Marketing</button></li>
 			</ul>
-			<ul>
+			<ul class="products list">
 				<li>
-					<a href="">
-						<img src="./images/banking_app.jpg" alt="Banking App Interface Concept" width="360" height="300">
-						<h2>Banking App Interface Concept</h2>
-						<p>App</p>
-						<p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+					<a href="" class="product link">
+						<img src="./images/banking_app.jpg" alt="Banking App Interface Concept" width="360" height="300" />
+						<h2 class="product-name">Banking App Interface Concept</h2>
+						<p class="product-type">App</p>
+						<p class="product-description"> 
+							14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
+							Ecommerce App · Cloud Storage App 
+						</p>
 					</a>
 				</li>
 				<li>
-					<a href="">
-						<img src="./images/cashless_payment.jpg" alt="Cashless Payment" width="360" height="300">
-						<h2>Cashless Payment</h2>
-						<p>Marketing</p>
-						<p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+					<a href="" class="product link">
+						<img src="./images/cashless_payment.jpg" alt="Cashless Payment" width="360" height="300" />
+						<h2 class="product-name">Cashless Payment</h2>
+						<p class="product-type">Marketing</p>
+						<p class="product-description">
+							14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
+							Ecommerce App · Cloud Storage App
+						</p>
 					</a>
 				</li>
 				<li>
-					<a href="">
-						<img src="./images/mediation_app.jpg" alt="Meditaion App" width="360" height="300">
-						<h2>Meditaion App</h2>
-						<p>App</p>
-						<p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+					<a href="" class="product link">
+						<img src="./images/mediation_app.jpg" alt="Meditaion App" width="360" height="300" />
+						<h2 class="product-name">Meditaion App</h2>
+						<p class="product-type">App</p>
+						<p class="product-description">
+							14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
+							Ecommerce App · Cloud Storage App
+							</p>
 					</a>
 				</li>
 				<li>
-					<a href="">
-						<img src="./images/taxi_service.jpg" alt="Taxi Service" width="360" height="300">
-						<h2>Taxi Service</h2>
-						<p>Marketing</p>
-						<p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+					<a href="" class="product link">
+						<img src="./images/taxi_service.jpg" alt="Taxi Service" width="360" height="300" />
+						<h2 class="product-name">Taxi Service</h2>
+						<p class="product-type">Marketing</p>
+						<p class="product-description">
+							14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
+							Ecommerce App · Cloud Storage App
+						</p>
 					</a>
 				</li>
 				<li>
-					<a href="">
-						<img src="./images/screen_illistrations.jpg" alt="Screen Illustrations" width="360" height="300">
-						<h2>Screen Illustrations</h2>
-						<p>Design</p>
-						<p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+					<a href="" class="product link">
+						<img src="./images/screen_illistrations.jpg" alt="Screen Illustrations" width="360" height="300" />
+						<h2 class="product-name">Screen Illustrations</h2>
+						<p class="product-type">Design</p>
+						<p class="product-description"></p>
+							14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
+							Ecommerce App · Cloud Storage App
+						</p>
 					</a>
 				</li>
 				<li>
-					<a href="">
-						<img src="./images/onine_courses.jpg" alt="Online Courses" width="360" height="300">
-						<h2>Online Courses</h2>
-						<p>Marketing</p>
-						<p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+					<a href="" class="product link">
+						<img src="./images/onine_courses.jpg" alt="Online Courses" width="360" height="300" />
+						<h2 class="product-name">Online Courses</h2>
+						<p class="product-type">Marketing</p>
+						<p class="product-description"> 
+							14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
+							Ecommerce App · Cloud Storage App 
+						</p>
 					</a>
 				</li>
 				<li>
-					<a href="">
-						<img src="./images/instagram_stories.jpg" alt="Instagram Stories Concept" width="360" height="300">
-						<h2>Instagram Stories Concept</h2>
-						<p>Design</p>
-						<p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+					<a href="" class="product link">
+						<img src="./images/instagram_stories.jpg" alt="Instagram Stories Concept" width="360" height="300" />
+						<h2 class="product-name">Instagram Stories Concept</h2>
+						<p class="product-type">Design</p>
+						<p class="product-description">
+							14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
+							Ecommerce App · Cloud Storage App
+						</p>
 					</a>
 				</li>
 				<li>
-					<a href="">
-						<img src="./images/organic_food.jpg" alt="Organic Food" width="360" height="300">
-						<h2>Instagram Stories Concept</h2>
-						<p>Web Site</p>
-						<p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+					<a href="" class="product link">
+						<img src="./images/organic_food.jpg" alt="Organic Food" width="360" height="300" />
+						<h2 class="product-name">Instagram Stories Concept</h2>
+						<p class="product-type">Web Site</p>
+						<p class="product-description">
+							14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
+							Ecommerce App · Cloud Storage App
+						</p>
 					</a>
 				</li>
 				<li>
-					<a href="">
-						<img src="./images/fresh_coffee.jpg" alt="Fresh Coffee" width="360" height="300">
-						<h2>Fresh Coffee</h2>
-						<p>Web Site</p>
-						<p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+					<a href="" class="product link">
+						<img src="./images/fresh_coffee.jpg" alt="Fresh Coffee" width="360" height="300" />
+						<h2 class="product-name">Fresh Coffee</h2>
+						<p class="product-type">Web Site</p>
+						<p class="product-description">
+							14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
+							Ecommerce App · Cloud Storage App
+						</p>
 					</a>
 				</li>
 			</ul>
@@ -113,9 +146,10 @@
 
 		<!--Підвал-->
 		<footer>
-			<a href="/"> <span>WEB</span>STUDIO </a>
-
-			<p> Increase the flow of customers and sales for your business with digital marketing & growth solutions. </p>
+			<a href="/" class="logo-footer"> <span class="logo-footer-span">WEB</span>STUDIO </a>
+			<p class="footer-text">
+				Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+			</p>
 		</footer>
 	</body>
 </html>
