--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<!--Шапка сайту-->
 		<header>
-			<a href="/" class="logo"> <span class="logo-span">WEB</span>STUDIO </a>
+			<a href="/" class="logo link"> <span class="logo-span link">WEB</span>STUDIO </a>
 
 			<nav>
 				<ul class="site-nav list">
@@ -93,30 +93,30 @@
 					<li>
 						<img src="./images/product_designer.jpg" alt="A worker with a beard" width="264" height="260" />
 						<h3 class="person-name">Mark Guerrero</h3>
-						<p class="position">Product Designer</p>
+						<p class="person-position">Product Designer</p>
 					</li>
 					<li>
 						<img src="./images/frontend_developer.jpg" alt="A young man worker" width="264" height="260" />
 						<h3 class="person-name">Tom Ford</h3>
-						<p class="position">Frontend Developer</p>
+						<p class="person-position">Frontend Developer</p>
 					</li>
 					<li>
 						<img src="./images/marketing.jpg" alt="A young girl worker" width="264" height="260" />
 						<h3 class="person-name">Camila Garcia</h3>
-						<p class="position">Marketing</p>
+						<p class="person-position">Marketing</p>
 					</li>
 					<li>
 						<img src="./images/ui_designer.jpg" alt="A young man worker with a beard" width="264" height="260" />
 						<h3 class="person-name">Daniel Wilson</h3>
-						<p class="position">UI Designer</p>
+						<p class="person-position">UI Designer</p>
 					</li>
 				</ul>
 			</section>
 		</main>
 
 		<!--Підвал-->
-		<footer>
-			<a href="/" class="logo-footer"> <span class="logo-footer-span">WEB</span>STUDIO </a>
+		<footer class="footer">
+			<a href="/" class="logo-footer link"> <span class="logo-footer-span link">WEB</span>STUDIO </a>
 			<p class="footer-text">
 				Increase the flow of customers and sales for your business with digital marketing & growth solutions.
 			</p>
