--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 	<body>
 		<!--Шапка сайту-->
 		<header>
-			<a href="/" class="logo"> <span class="logo-span">WEB</span>STUDIO </a>
+			<a href="/" class="logo link"> <span class="logo-span link">WEB</span>STUDIO </a>
 
 			<nav>
 				<ul class="site-nav list">
@@ -32,121 +32,87 @@
 			</ul>
 		</header>
 		<!--Освноний контент-->
-		<main class="portfolio">
-			<h1 class="portfolio-title">Portfolio</h1>
-			<ul class="portfolio-filter list">
-				<li><button class="portfolio-type" type="button">All</button></li>
-				<li><button class="portfolio-type" type="button">Web Site</button></li>
-				<li><button class="portfolio-type" type="button">App</button></li>
-				<li><button class="portfolio-type" type="button">Design</button></li>
-				<li><button class="portfolio-type" type="button">Marketing</button></li>
-			</ul>
-			<ul class="products list">
-				<li>
-					<a href="" class="product link">
-						<img src="./images/banking_app.jpg" alt="Banking App Interface Concept" width="360" height="300" />
-						<h2 class="product-name">Banking App Interface Concept</h2>
-						<p class="product-type">App</p>
-						<p class="product-description"> 
-							14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
-							Ecommerce App · Cloud Storage App 
-						</p>
-					</a>
-				</li>
-				<li>
-					<a href="" class="product link">
-						<img src="./images/cashless_payment.jpg" alt="Cashless Payment" width="360" height="300" />
-						<h2 class="product-name">Cashless Payment</h2>
-						<p class="product-type">Marketing</p>
-						<p class="product-description">
-							14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
-							Ecommerce App · Cloud Storage App
-						</p>
-					</a>
-				</li>
-				<li>
-					<a href="" class="product link">
-						<img src="./images/mediation_app.jpg" alt="Meditaion App" width="360" height="300" />
-						<h2 class="product-name">Meditaion App</h2>
-						<p class="product-type">App</p>
-						<p class="product-description">
-							14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
-							Ecommerce App · Cloud Storage App
-							</p>
-					</a>
-				</li>
-				<li>
-					<a href="" class="product link">
-						<img src="./images/taxi_service.jpg" alt="Taxi Service" width="360" height="300" />
-						<h2 class="product-name">Taxi Service</h2>
-						<p class="product-type">Marketing</p>
-						<p class="product-description">
-							14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
-							Ecommerce App · Cloud Storage App
-						</p>
-					</a>
-				</li>
-				<li>
-					<a href="" class="product link">
-						<img src="./images/screen_illistrations.jpg" alt="Screen Illustrations" width="360" height="300" />
-						<h2 class="product-name">Screen Illustrations</h2>
-						<p class="product-type">Design</p>
-						<p class="product-description"></p>
-							14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
-							Ecommerce App · Cloud Storage App
-						</p>
-					</a>
-				</li>
-				<li>
-					<a href="" class="product link">
-						<img src="./images/onine_courses.jpg" alt="Online Courses" width="360" height="300" />
-						<h2 class="product-name">Online Courses</h2>
-						<p class="product-type">Marketing</p>
-						<p class="product-description"> 
-							14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
-							Ecommerce App · Cloud Storage App 
-						</p>
-					</a>
-				</li>
-				<li>
-					<a href="" class="product link">
-						<img src="./images/instagram_stories.jpg" alt="Instagram Stories Concept" width="360" height="300" />
-						<h2 class="product-name">Instagram Stories Concept</h2>
-						<p class="product-type">Design</p>
-						<p class="product-description">
-							14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
-							Ecommerce App · Cloud Storage App
-						</p>
-					</a>
-				</li>
-				<li>
-					<a href="" class="product link">
-						<img src="./images/organic_food.jpg" alt="Organic Food" width="360" height="300" />
-						<h2 class="product-name">Instagram Stories Concept</h2>
-						<p class="product-type">Web Site</p>
-						<p class="product-description">
-							14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
-							Ecommerce App · Cloud Storage App
-						</p>
-					</a>
-				</li>
-				<li>
-					<a href="" class="product link">
-						<img src="./images/fresh_coffee.jpg" alt="Fresh Coffee" width="360" height="300" />
-						<h2 class="product-name">Fresh Coffee</h2>
-						<p class="product-type">Web Site</p>
-						<p class="product-description">
-							14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
-							Ecommerce App · Cloud Storage App
-						</p>
-					</a>
-				</li>
-			</ul>
+		<main>
+			<section>
+				<h1 class="portfolio-title">Portfolio</h1>
+				<ul class="portfolio-filter list">
+					<li><button class="portfolio-type" type="button">All</button></li>
+					<li><button class="portfolio-type" type="button">Web Site</button></li>
+					<li><button class="portfolio-type" type="button">App</button></li>
+					<li><button class="portfolio-type" type="button">Design</button></li>
+					<li><button class="portfolio-type" type="button">Marketing</button></li>
+				</ul>
+				<ul class="products list">
+					<li>
+						<a href="" class="product link">
+							<img src="./images/banking_app.jpg" alt="Banking App Interface Concept" width="360" height="300" />
+							<h2 class="product-name">Banking App Interface Concept</h2>
+							<p class="product-type">App</p>
+						</a>
+					</li>
+					<li>
+						<a href="" class="product link">
+							<img src="./images/cashless_payment.jpg" alt="Cashless Payment" width="360" height="300" />
+							<h2 class="product-name">Cashless Payment</h2>
+							<p class="product-type">Marketing</p>
+						</a>
+					</li>
+					<li>
+						<a href="" class="product link">
+							<img src="./images/mediation_app.jpg" alt="Meditaion App" width="360" height="300" />
+							<h2 class="product-name">Meditaion App</h2>
+							<p class="product-type">App</p>
+						</a>
+					</li>
+					<li>
+						<a href="" class="product link">
+							<img src="./images/taxi_service.jpg" alt="Taxi Service" width="360" height="300" />
+							<h2 class="product-name">Taxi Service</h2>
+							<p class="product-type">Marketing</p>
+						</a>
+					</li>
+					<li>
+						<a href="" class="product link">
+							<img src="./images/screen_illistrations.jpg" alt="Screen Illustrations" width="360" height="300" />
+							<h2 class="product-name">Screen Illustrations</h2>
+							<p class="product-type">Design</p>
+						</a>
+					</li>
+					<li>
+						<a href="" class="product link">
+							<img src="./images/onine_courses.jpg" alt="Online Courses" width="360" height="300" />
+							<h2 class="product-name">Online Courses</h2>
+							<p class="product-type">Marketing</p>
+						</a>
+					</li>
+					<li>
+						<a href="" class="product link">
+							<img src="./images/instagram_stories.jpg" alt="Instagram Stories Concept" width="360" height="300" />
+							<h2 class="product-name">Instagram Stories Concept</h2>
+							<p class="product-type">Design</p>
+						</a>
+					</li>
+					<li>
+						<a href="" class="product link">
+							<img src="./images/organic_food.jpg" alt="Organic Food" width="360" height="300" />
+							<h2 class="product-name">Instagram Stories Concept</h2>
+							<p class="product-type">Web Site</p>
+						</a>
+					</li>
+					<li>
+						<a href="" class="product link">
+							<img src="./images/fresh_coffee.jpg" alt="Fresh Coffee" width="360" height="300" />
+							<h2 class="product-name">Fresh Coffee</h2>
+							<p class="product-type">Web Site</p>
+						</a>
+					</li>
+				</ul>
+			</section>
 		</main>
 
 		<!--Підвал-->
-		<footer>
-			<a href="/" class="logo-footer"> <span class="logo-footer-span">WEB</span>STUDIO </a>
+		<footer class="footer">
+			<a href="/" class="logo-footer link"> <span class="logo-footer-span link">WEB</span>STUDIO </a>
 			<p class="footer-text">
 				Increase the flow of customers and sales for your business with digital marketing & growth solutions.
 			</p>
